--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Valoran Tracker</title>
 </head>
 <body>
+    <header>
     <h1>Valorant Tracker</h1>
-    
+    <img src="valorant.png"
+    </header>
+ <p> ASCENT/INCEBOX/LOTUS/HAVEN/SPLIT</p>   
 </body>
 </html>
