--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Valorant Tracker</h1>
     <img src="valorant.png"
     </header>
- <p> ASCENT/INCEBOX/LOTUS/HAVEN/SPLIT</p>   
+ <p> ASCENT/INCEBOX/LOTUS/HAVEN/SPLIT</p>
+ <p> ALL/ATK/DEF</p> 
 </body>
 </html>
