--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 <body>
     <header>
     <h1>Valorant Tracker</h1>
-    <img src="valorant.png"
+    <img src="valorant.jpeg" alt="logo site"> 
     </header>
  <p> ASCENT/INCEBOX/LOTUS/HAVEN/SPLIT</p>
  <p> ALL/ATK/DEF</p> 
+ <img src="sova.jpg" alt="fotinho">
+ <img src="sovadnv.jpg" alt="fotinhodnv">
+ <img src="homidaflecha.jpg" alt="minecraftpocketedition">
+ <img src="manoftheflecha.webp" alt="fortnitejavaedition">
 </body>
 </html>
